--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
         </div>
         <div class="footer-column">
             <h3 class="section-title">Let's Message me</h3>
+            <form class="contact" action="">
+                <input type="text" name="name" placeholder="Your Name">
+                <input type="email" name="email" placeholder="Your Email" id="">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input class="btn-primary" type="submit" value="submit">
+            </form>
         </div>
     </footer>
 </body>
